--- a/README
+++ b/README
@@ -3,3 +3,15 @@ My practice for react-native development
 Start project:
 $ npm install -g expo-cli
 $ expo start
+
+
+Setup:
+npm install react-navigation --save
+npm install --save react-navigation-stack
+npm install --save react-navigation-tabs
+npm install --save react-navigation-drawer
+npm install --save react-navigation-header-buttons
+npm install --save @expo/vector-icons
+npm install --save react-navigation-material-bottom-tabs
+npm install --save react-native-pape
+npm install --save redux react-redux
